--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,35 @@
+<!-- an HTML5 document -->
 <!doctype html>
+<!-- set document's primary language (English) -->
 <html lang="en">
 <head>
+  <!-- specifies UTF-8 character encoding for the HTML document, ensuring proper display of special characters and text in various languages,it's essential -->
   <meta charset="utf-8">
   <title>H&M – Loja</title>
+  <!-- <base href="/"> - automatically generated and placed into the body, its the app.routes placeholder that sets the base URL for relative paths-->
   <base href="/">
+  <!-- the configuration for responsive behavior -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- configuration to use Bootstrap interactive components (JavaScript) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <!-- configuration to use Bootstrap's core styling (CSS) files  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- link to use the fontawesome icons -->
   <link rel="stylesheet" href="fontawesome/css/all.css">
+  <!-- rel="preconnect" - establish early connections to Google Fonts servers for faster loading -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Open Sans font loaded with weights 300-800 (both normal and italic) -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- sets the website icon -->
+  <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
+  <!-- Roboto font loaded with specific weights (300, 400, 500) -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <!-- Material Icons font loaded for Angular Material icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <!-- <app-root> - automatically generated and placed into the body, its the app.component template placeholder -->
   <app-root></app-root>
 </body>
 </html>
